# transcriptomic-fms

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: verify_geneformer_order.py
tests/: README.md  __init__.py  base_test.py  conftest.py  test_gene_ids.py  test_geneformer_tokenization.py  test_pca.py  test_pre_embedding_check.py  test_scfoundation_gene_matching.py  test_scgpt.py  test_scgpt_gene_matching.py  test_sensitivity_analysis.py  test_template.py  utils.py
transcriptomic_fms/: __init__.py
transcriptomic_fms/cli/: __init__.py  main.py
transcriptomic_fms/hpc/: README_FLASH_ATTN.md  Singularity.def  __init__.py  run_job.sh  setup_hpc.sh
transcriptomic_fms/models/: __init__.py  base.py  container_registry.py  geneformer.py  get_dep_group.py  pca.py  registry.py  scconcept.py  scfoundation.py  scgpt.py  scimilarity.py
transcriptomic_fms/models/containers/: README.md
transcriptomic_fms/models/containers/geneformer/: Singularity.def
transcriptomic_fms/models/containers/pca/: Singularity.def
transcriptomic_fms/models/containers/scconcept/: Singularity.def
transcriptomic_fms/models/containers/scfoundation/: Singularity.def
transcriptomic_fms/models/containers/scgpt/: Singularity.def
transcriptomic_fms/models/containers/scimilarity/: Singularity.def
transcriptomic_fms/models/vocabs/: scconcept_vocab.csv
transcriptomic_fms/utils/: gene_ids.py  logging.py
transcriptomic_fms/validation/: __init__.py  embed_inputs.py
