[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "transcriptomic_fms"
version = "0.0.1"
description = "Common interface for working with transcriptomic foundation models"
authors = [
  { name = "Ahmed Sallam" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scanpy",
    "scikit-learn",
]
requires-python = "~=3.11.0"

[project.scripts]
transcriptomic-fms = "transcriptomic_fms.cli.main:main"


[tool.ruff]
line-length = 99
src = ["transcriptomic_fms"]
include = ["pyproject.toml", "transcriptomic_fms/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["transcriptomic_fms"]
force-sort-within-sections = true

